[build-system]
requires = ["setuptools>=45", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-tank-simulation"
version = "1.0.0"
description = "A sophisticated swarm intelligence simulation with autonomous bots and emergent behaviors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
keywords = ["swarm intelligence", "simulation", "pygame", "artificial intelligence", "emergent behavior"]
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "isort",
]

[project.urls]
Homepage = "https://github.com/yourusername/swarm-tank-simulation"
Repository = "https://github.com/yourusername/swarm-tank-simulation"
Issues = "https://github.com/yourusername/swarm-tank-simulation/issues"
Documentation = "https://github.com/yourusername/swarm-tank-simulation/blob/main/README.md"

[project.scripts]
swarm-tank = "swarm_tank:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "off"
include = []
ignore = ["**/*"]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportAttributeAccessIssue = false
reportUnknownArgumentType = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportPrivateImportUsage = false
